# WynntilsResolver

./: .gitignore  .pdm.toml  LICENSE  pyproject.toml  readme.md
.github/workflows/: publish.yml
.husky/: commit-msg
src/wynntilsresolver/: __init__.py  __main__.py  cli.py  exception.py  exceptions.py  item.py  model.py  resolver.py  startup.py  utils.py
src/wynntilsresolver/blocks/: __init__.py  block.py  end.py  identification.py  name.py  powder.py  reroll.py  shiny.py  type.py  version.py
tests/: test_item.py  test_resolver.py  test_utils.py
tests/test_blocks/: test_block.py  test_shiny.py
wynntilsresolver/: __init__.py  datastore.py  exception.py  item.py  model.py  resolver.py  resource.py  startup.py  utils.py
wynntilsresolver/blocks/: __init__.py  block.py  end.py  identification.py  name.py  powder.py  reroll.py  shiny.py  type.py  version.py
