[project]
name = "wynntilsresolver"
version = "1.0.1"
description = "A simple resolver to analyze wynntils' encoded equipment in chat."
authors = [{ name = "FYWinds", email = "i@windis.cn" }]
dependencies = ["httpx==0.27.0"]
requires-python = ">=3.8"
readme = "readme.md"
keywords = ["wynntils", "resolver", "wynncraft"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/fywinds/WynntilsResolver"
Repository = "https://github.com/fywinds/WynntilsResolver"
Documentation = "https://github.com/fywinds/WynntilsResolver"
Changelog = "https://github.com/fywinds/WynntilsResolver"

[project.optional-dependencies]
dev = ["ruff==0.3.0"]
test = ["pytest==8.0.2", "pytest-cov==4.1.0", "pytest-xdist==3.5.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["wynntilsresolver"]
excludes = ["temp"]

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = ["temp/*"]
src = ["wynntilsresolver"]

[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
]
ignore = [
    "E402",  # module-import-not-at-top-of-file
    "UP037", # quoted_annotation
]

[tool.ruff.lint.pyupgrade]
# keep typing even used from __future__ import annotations
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = "-n 4 --cov=wynntilsresolver --cov-report xml:cov.xml"
