[project]
name = "wynntilsresolver"
version = "1.5.0"
description = "A simple resolver to analyze wynntils' encoded equipment in chat."
authors = [{ name = "FYWinds", email = "i@windis.cn" }]
dependencies = ["httpx==0.27.0", "typing-extensions>=4.12.2"]
requires-python = ">=3.8"
readme = "readme.md"
license = "MIT"
keywords = ["wynntils", "resolver", "wynncraft"]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/fywinds/WynntilsResolver"
Repository = "https://github.com/fywinds/WynntilsResolver"
Documentation = "https://github.com/fywinds/WynntilsResolver"
Changelog = "https://github.com/fywinds/WynntilsResolver"

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "wynntilsresolver"
module-root = ""

[project.optional-dependencies]
test = ["pytest==8.0.2", "pytest-cov==4.1.0", "pytest-xdist==3.5.0"]

[tool.uv]
dev-dependencies = ["pytest==8.0.2", "pytest-cov==4.1.0", "pytest-xdist==3.5.0"]

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = ["temp/*"]
src = ["wynntilsresolver"]

[tool.ruff.lint]
select = ["W", "E", "F", "UP", "C4", "T10", "T20", "PYI", "PT", "Q"]
ignore = ["E402", "UP037", "PYI034"]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
addopts = "-n 4 --cov=wynntilsresolver --cov-report xml:cov.xml"

[tool.basedpyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
